tests/NormalTests/paczka1/small_fuzzy/85750170.err
Error in line 11: jW1hgYD S696 24,5
Error in line 8: fOLqoLt3QhP S670 57,4
